objects/Opportunity_Queue__c.object
<CustomObject>
    <description>SFDC2: Used by enterprise in conjunction with opportunities to set up a queuing system for Opportunities</description>
    <fields>
        <fullName>Dealer_Address__c</fullName>
        <formula>Opportunity__r.Dealer_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <formula>Opportunity__r.Dealer_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Phone_Number__c</fullName>
        <formula>Opportunity__r.Dealer_Phone_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity originally assigned to queue</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Queues</relationshipLabel>
        <relationshipName>Opportunity_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Change_Date_Time__c</fullName>
        <description>The date/time when ownership changed from the queue to a standard user</description>
        <label>Owner Change Date Time</label>
        <type>DateTime</type>
    </fields>
    <label>Opportunity Queue</label>
    <listViews>
        <fullName>Advisor_Opportunity_Queue_Opportunity_Queue</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Owner_Change_Date_Time__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>Advisor Opportunity Queue</label>
        <queue>Advisor_Opportunity_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Owner_Change_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>Salesforce_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Auto_Lending_Opportunity_Queue_Opportunity_Queue</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Owner_Change_Date_Time__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>Auto-Lending Opportunity Queue</label>
        <queue>Auto_Lending_Opportunity_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Business_Banking_Opportunity_Queue_Opportunity_Queue</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Owner_Change_Date_Time__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>Business Banking Opportunity Queue</label>
        <queue>Business_Banking_Opportunity_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>C_I_CRESL_SFDC2_Opportunity_Queue</fullName>
        <filterScope>Queue</filterScope>
        <label>C&amp;I CRESL SFDC2</label>
        <queue>C_I_CRESL_SFDC2</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>C_I_EQF_SFDC2_Opportunity_Queue</fullName>
        <filterScope>Queue</filterScope>
        <label>C&amp;I EQF SFDC2</label>
        <queue>C_I_EQF_SFDC2</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>C_I_Factoring_SFDC2_Opportunity_Queue</fullName>
        <filterScope>Queue</filterScope>
        <label>C&amp;I Factoring SFDC2</label>
        <queue>C_I_Factoring_SFDC2</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>C_I_NRELF_SFDC2_Opportunity_Queue</fullName>
        <filterScope>Queue</filterScope>
        <label>C&amp;I NRELF SFDC2</label>
        <queue>C_I_NRELF_SFDC2</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>C_I_RELF_SFDC2_Opportunity_Queue</fullName>
        <filterScope>Queue</filterScope>
        <label>C&amp;I RELF SFDC2</label>
        <queue>C_I_RELF_SFDC2</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Commercial_Banking_Opportunity_Queue_Opportunity_Queue</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Owner_Change_Date_Time__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>Commercial Banking SFDC2</label>
        <queue>Commercial_Banking_Opportunity_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Consumer_Deposits_Opportunity_Queue_Opportunity_Queue</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Owner_Change_Date_Time__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>Consumer Deposits Opportunity Queue</label>
        <queue>Consumer_Deposits_Opportunity_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Consumer_Wholesale_Opportunity_Queue_Opportunity_Queue</fullName>
        <filterScope>Queue</filterScope>
        <label>Consumer Wholesale Opportunity Queue</label>
        <queue>Consumer_Wholesale_Opportunity_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Direct_Auto_Lending_Opportunity_Queue_Opportunity_Queue</fullName>
        <filterScope>Queue</filterScope>
        <label>Direct Auto Lending Opportunity Queue</label>
        <queue>Direct_Auto_Lending_Opportunity_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Epiq_Opportunity_Queue_Opportunity_Queue</fullName>
        <filterScope>Queue</filterScope>
        <label>Fiduciary Services Opportunity Queue</label>
        <queue>Epiq_Opportunity_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Find_an_opportunity</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Name__c</field>
            <operation>equals</operation>
            <value>Opportunity Michael Paolini-mikepaolini724@gmail.com Enrollment - 77832</value>
        </filters>
        <label>Find an opportunity</label>
    </listViews>
    <nameField>
        <displayFormat>OQ-{000000000}</displayFormat>
        <label>Opportunity Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>